# UTS_week_report

./: UTS_week_report.code-workspace  week1.md
week1/word2Vec/: Iamacat_jp.txt  word2vec.py
week2/: gen.txt  meta.json  requirements.txt  run_detect.py  run_generate.py  watermark_min.py
week2/wmark_package/: LICENSE  README.md  pyproject.toml
week2/wmark_package/src/wmark/: __init__.py  cli.py  runner.py  watermark.py
week2/wmark_package/tests/: test_basic.py
week2/wmark_pkg/: README.md
week2/wmark_pkg/src/wmark/: __init__.py  cli.py  runner.py  watermark.py
week2/wmark_pkg/src/wmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
week2/wmark_pkg/tests/: test_basic.py
week3/: cli.py  demo.py  mykey.txt  synthid.py
word2Vec/: Iamacat_ch.txt  Iamacat_en.txt  download_ipadic.py
