[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmark"
version = "0.1.0"
description = "Minimal text watermarking toolkit (soft greenlist + hash buckets) for LLM outputs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Liu Sicheng & ChatGPT", email = "example@example.com"}]
keywords = ["watermark", "LLM", "NLP", "security", "detection"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.0.0",
  "transformers>=4.41.0",
  "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
wm-generate = "wmark.cli:main_generate"
wm-detect = "wmark.cli:main_detect"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
